--- a/css/styles.css
+++ b/css/styles.css
@@ -81,6 +81,10 @@ h2 {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.inpyt {
+  font-family: inherit;
+}
+
 /*-----------header------------*/
 
 .header {
@@ -221,6 +225,109 @@ h2 {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+/*-------Form---------*/
+
+.form {
+  display: flex;
+  flex-direction: column;
+  max-width: 408px;
+  border-radius: 4px;
+  padding: 24px;
+}
+
+.close-form {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 24px;
+}
+
+.form-button-close {
+  display: flex;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  border: 1px solid  rgba(0, 0, 0, 0.1);
+  justify-content: center;
+  align-items: center;
+  background-color: #e7e9fc;
+}
+
+.form-icon {
+  fill: #2e2f42;
+
+}
+
+.title-fotm {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  margin-bottom: 16px;
+}
+
+.form-label {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  }
+
+.form-span {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+
+.form-input {
+  margin-bottom: 8px;
+}
+
+.form-textarea {
+  margin-bottom: 16px;
+}
+
+.form-input,
+.form-textarea {
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+}
+
+.form-icon.person {
+  
+
+}
+
+.fotm-checkbox {
+  margin-bottom: 24px;
+}
+
+.form-link {
+  text-decoration: revert;
+}
+
+.form-button {
+  border-radius: 4px;
+  width: 169px;
+  height: 56px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background-color: #4d5ae5;
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #fff;
+  border: none;
+  margin: 0 auto;
+}
+
+.form-input:hover,
+.form-input:focus,
+.form-input:active {
+  border: 1px solid #4d5ae5;
+}
 
 /*-------section-2---------*/
 
@@ -242,7 +349,6 @@ h2 {
   background-color: #f4f4fd;
   border-radius: 4px;
   border: 1px solid #8e8f99;
-  margin-bottom: 8px;
 }
 
 .icon-li {
