--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,10 @@ h2 {
   color: #2E2F42;
 }
 
+button {
+  border: none;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -207,7 +211,7 @@ h2 {
   margin-bottom: 48px;
 }
 
-.section-one .button {
+.container .button {
   background-color: #4D5AE5;
   font-size: 16px;
   font-weight: 500;
@@ -218,7 +222,6 @@ h2 {
   min-width: 169px;
   height: 56px;
   box-shadow: 0 4px 4px 0 rgb(0 0 0 / 15%);
-  border: none;
   display: block;
   margin: 0 auto;
   transition-property: color, background-color;
@@ -245,7 +248,7 @@ h2 {
   display: flex;
   width: 24px;
   height: 24px;
-  border-radius: 50%;
+  border-radius: 100%;
   border: 1px solid  rgba(0, 0, 0, 0.1);
   justify-content: center;
   align-items: center;
@@ -254,7 +257,18 @@ h2 {
 
 .form-icon {
   fill: #2e2f42;
+}
 
+.form-button-close:hover .form-icon,
+.form-button-close:focus .form-icon, 
+.form-button-close:active .form-icon {
+  fill: #FFFFFF;
+}
+
+.form-button-close:hover,
+.form-button-close:focus, 
+.form-button-close:active {
+  background-color: #404bbf;
 }
 
 .title-fotm {
@@ -281,23 +295,61 @@ h2 {
   color: #8e8f99;
 }
 
+.form-icon-inptut {
+  position: relative;
+}
+
+.form-icon {
+position:absolute;
+}
+
 .form-input {
   margin-bottom: 8px;
+  width: 360px;
+  height: 40px;
+
 }
 
 .form-textarea {
   margin-bottom: 16px;
+  padding-top: 8px;
+
 }
 
 .form-input,
 .form-textarea {
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
+  outline: none;
+  padding-left: 16px;
+}
+
+.form-label:hover .form-icon,
+.form-label:focus-within .form-icon,
+.form-label:active .form-icon {
+  fill: #4d5ae5;
+}
+
+.form-textarea::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+}
+
+.form-input:hover,
+.form-input:focus, 
+.form-input:active,
+.form-textarea:hover,
+.form-textarea:focus, 
+.form-textarea:active  {
+  border: 1px solid #4d5ae5;
+  border-radius: 4px;
 }
 
 .form-icon.person {
   
-
 }
 
 .fotm-checkbox {
@@ -319,15 +371,9 @@ h2 {
   letter-spacing: 0.04em;
   text-align: center;
   color: #fff;
-  border: none;
   margin: 0 auto;
 }
 
-.form-input:hover,
-.form-input:focus,
-.form-input:active {
-  border: 1px solid #4d5ae5;
-}
 
 /*-------section-2---------*/
 
@@ -580,6 +626,10 @@ h2 {
   max-width: 264px;
 }
 
+.media-footer {
+  margin-right: 80px;
+}
+
 .media-footer .title {
   font-weight: 500;
   line-height: 1.5;
@@ -613,6 +663,70 @@ h2 {
 
 .icon-footer .icon {
   fill: #f4f4fd;
+}
+
+.footer-form {
+
+}
+
+.footer-form-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+}
+
+.footer-label-button {
+  display: flex;
+  gap: 24px
+}
+
+.footer-form-label {
+
+
+
+}
+
+.footer-form-span {
+}
+
+.footer-form-input {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  background-color: #2E2F42;
+  border: 1px solid #fff;
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  padding-left: 16px;
+}
+
+.footer-form-button {
+  border-radius: 4px;
+  width: 165px;
+  background-color: #4d5ae5;;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+
+.footer-button-span {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #fff;
+}
+
+.footer-form-icon {
+  fill: #fff;
 }
 
 .icon-footer .link:hover,
