--- a/css/styles.css
+++ b/css/styles.css
@@ -273,6 +273,7 @@ h2 {
   justify-content: center;
   align-items: center;
   background-color: #e7e9fc;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-icon {
@@ -415,6 +416,10 @@ h2 {
   text-align: center;
   color: #fff;
   margin: 0 auto;
+}
+
+.form-button {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -755,6 +760,7 @@ h2 {
   justify-content: center;
   align-items: center;
   gap: 16px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-button-span {
@@ -784,6 +790,12 @@ h2 {
 
 .button:hover,
 .button:focus, 
-.button:active {
+.button:active,
+.footer-form-button:hover,
+.footer-form-button:focus, 
+.footer-form-button:active,
+.form-button:hover,
+.form-button:focus, 
+.form-button:active {
   background-color: #404BBF;
 }
