--- a/css/styles.css
+++ b/css/styles.css
@@ -226,6 +226,7 @@ h2 {
 .modal-overlay {
   background-color: rgba(46, 47, 66, 0.4);
   position: fixed;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); 
   top: 0;
   left: 0;
   width: 100%;
@@ -714,7 +715,8 @@ h2 {
 }
 
 .footer-form {
-
+  display: flex;
+  gap: 24px;
 }
 
 .footer-form-title {
@@ -724,10 +726,6 @@ h2 {
   letter-spacing: 0.02em;
   color: #fff;
   margin-bottom: 16px;
-}
-
-.footer-label-button {
-  display: flex;
 }
 
 .footer-form-label {
@@ -749,18 +747,23 @@ h2 {
   height: 40px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   padding-left: 16px;
-  margin-right: 24px;
+  color: #ffffff;
+}
+
+input::placeholder {
+  color: #FFFFFF;
 }
 
 .footer-form-button {
   border-radius: 4px;
-  width: 165px;
+  min-width: 165px;
+  height: 40px;
   background-color: #4d5ae5;;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 16px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: #FFFFFF;
 }
 
 .footer-button-span {
@@ -774,6 +777,7 @@ h2 {
 
 .footer-form-icon {
   fill: #fff;
+  margin-left: 16px;
 }
 
 .icon-footer .link:hover,
