--- a/css/styles.css
+++ b/css/styles.css
@@ -525,9 +525,6 @@ h2 {
 
 }
 
-.footer-form-span {
-}
-
 .footer-form-input {
   font-weight: 400;
   font-size: 12px;
@@ -541,6 +538,7 @@ h2 {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   padding-left: 16px;
   color: #ffffff;
+  background-color: transparent;
 }
 
 input::placeholder {
@@ -557,15 +555,9 @@ input::placeholder {
   align-items: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: #FFFFFF;
-}
-
-.footer-button-span {
   font-weight: 500;
-  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  text-align: center;
-  color: #fff;
 }
 
 .footer-form-icon {
@@ -631,18 +623,22 @@ input::placeholder {
   background-color: #e7e9fc;
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0;
-  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-icon-close {
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-button-close:hover .modal-icon-close {
+.modal-button-close:hover .modal-icon-close,
+.modal-button-close:focus .modal-icon-close,
+.modal-button-close:active .modal-icon-close {
   fill: #FFFFFF;
 }
 
-.modal-button-close:hover {
+.modal-button-close:hover,
+.modal-button-close:focus,
+.modal-button-close:active {
   background-color: #404bbf;
   border: none;
 }
@@ -663,7 +659,7 @@ input::placeholder {
 }
 
 .form-field {
-
+  margin-bottom: 8px;
 }
 
 .form-label {
@@ -677,7 +673,6 @@ input::placeholder {
 
 .form-icon-inptut {
   position: relative;
-  margin-bottom: 8px;
 }
 
 .form-input {
