--- a/css/styles.css
+++ b/css/styles.css
@@ -530,7 +530,6 @@ h2 {
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
-  background-color: #2E2F42;
   border: 1px solid #fff;
   border-radius: 4px;
   width: 264px;
@@ -541,7 +540,7 @@ h2 {
   background-color: transparent;
 }
 
-input::placeholder {
+.footer-form-input::placeholder {
   color: #FFFFFF;
 }
 
@@ -572,7 +571,7 @@ input::placeholder {
 }
 
 
-/*-------modal-overlay---------*/
+/*-----modal--is-open-------*/
 
 .modal-overlay {
   background-color: rgba(46, 47, 66, 0.4);
@@ -627,7 +626,7 @@ input::placeholder {
 }
 
 .modal-icon-close {
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-button-close:hover .modal-icon-close,
@@ -742,6 +741,8 @@ input::placeholder {
 }
 
 .checkbox-span {
+  width: 16px;
+  height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -751,7 +752,7 @@ input::placeholder {
   fill: transparent;
 }
 
-.checkbox:checked .checkbox-span {
+.visually-hidden:checked .checkbox-span {
   background-color: #404bbf;
   border: none;
   fill: #F4F4FD;
@@ -773,6 +774,7 @@ input::placeholder {
   font-size: 16px;
   font-weight: 500;
   letter-spacing: 0.04em;
+  line-height: 1.5
   color: #fff;
   background-color: #4d5ae5;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
