--- a/css/styles.css
+++ b/css/styles.css
@@ -750,12 +750,28 @@ h2 {
   align-items: center;
   justify-content: center;
   fill: transparent;
+  margin-right: 8px;
 }
 
-.visually-hidden:checked .checkbox-span {
+.checkbox-label:checked .checkbox-span {
   background-color: #404bbf;
   border: none;
   fill: #F4F4FD;
+}
+
+.checkbox-span:focus .checkbox-icon,
+.checkbox-span:active .checkbox-icon {
+  border: none;
+  fill: #F4F4FD;
+}
+
+.checkbox-span:focus,
+.checkbox-span:active {
+  background-color: #404bbf;
+}
+
+.checkbox-icon {
+
 }
 
 .checkbox-link {
@@ -774,7 +790,7 @@ h2 {
   font-size: 16px;
   font-weight: 500;
   letter-spacing: 0.04em;
-  line-height: 1.5
+  line-height: 1.5;
   color: #fff;
   background-color: #4d5ae5;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
