--- a/css/styles.css
+++ b/css/styles.css
@@ -753,7 +753,7 @@ h2 {
   margin-right: 8px;
 }
 
-.checkbox-label:checked .checkbox-span {
+.visually-hidden:checked .checkbox-span {
   background-color: #404bbf;
   border: none;
   fill: #F4F4FD;
